# fooCV

./: CMakeLists.txt  README.md  main.c
inc/: imgconf.h  imgproc.h  matrix.h  paint.h
lib/: CMakeLists.txt  imgconf.c  imgproc.c  matrix.c  paint.c
